--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id "com.github.johnrengelman.shadow" version "8.1.1"
 }
 
 group = 'me.inotsleep'
@@ -19,6 +20,7 @@ repositories {
 
 dependencies {
     compileOnly "com.destroystokyo.paper:paper-api:1.16.5-R0.1-SNAPSHOT"
+    implementation files("./utils.jar")
 }
 
 def targetJavaVersion = 8
@@ -31,7 +33,12 @@ java {
     }
 }
 
+tasks.named("build") {
+    dependsOn(shadowJar)
+}
+
 tasks.withType(JavaCompile).configureEach {
+    options.encoding = "UTF-8"
     if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
         options.release = targetJavaVersion
     }
